fix(math): allow to scroll overflowing panel contents
instead of clipping. #38

--- a/src/renderer/home/panels/basics.scss
+++ b/src/renderer/home/panels/basics.scss
@@ -1,6 +1,8 @@
 @import "~@blueprintjs/core/lib/scss/variables";
 
 :local .panelBase {
+  overflow-x: auto;
+
   :global .bp3-rtl {
     .bp3-input {
       direction: rtl;
